# messaging_app

./: CMakeLists.txt  README.md
app_server/: Cargo.toml
app_server/src/: main.rs  tests.rs
app_server/src/database/: database.rs
app_server/src/main_server/: main_server.rs  mod.rs
app_server/src/server/: chat_server.rs  mod.rs
config/: app1_config.yaml  app2_config.yaml  app3_config.yaml
include/messaging_application/: central_widget.hpp  chat_widget.hpp  client.hpp  contacts_widget.hpp  db.hpp  definitions.hpp  group_chat_widget.hpp  main_window.hpp  profile_widget.hpp
src/: central_widget.cpp  chat_widget.cpp  client.cpp  contacts_widget.cpp  db.cpp  group_chat_widget.cpp  main_window.cpp  profile_widget.cpp  program.cpp
